--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.jpa.defer-datasource-initialization=true
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.main.allow-bean-definition-overriding=true
