--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.main.allow-bean-definition-overriding=true
+
+spring.mvc.cors.allow-credentials=true
+spring.mvc.cors.allowed-headers=*
+spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE
+spring.mvc.cors.allowed-origins=*
+spring.mvc.cors.max-age=3600
+
