--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.main.allow-bean-definition-overriding=true
+hibernate.dialect=org.hibernate.dialect.H2Dialect
